[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "infrabaseline-audit"
version         = "0.1.0"
description     = "HIPAA & SOC2 compliance scanner for AWS — with direct fix mapping to Infrabaseline Terraform modules."
readme          = "README.md"
license         = { text = "MIT" }
authors         = [{ name = "Infrabaseline", email = "hello@infrabaseline.com" }]
requires-python = ">=3.11"

keywords = [
    "aws", "compliance", "hipaa", "soc2", "terraform",
    "security", "infrastructure", "devops", "audit",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "pyfiglet>=1.0.2",
]

[project.urls]
Homepage    = "https://infrabaseline.com"
Repository  = "https://github.com/Infrabaseline/infrabaseline-audit"
"Bug Tracker" = "https://github.com/Infrabaseline/infrabaseline-audit/issues"

[project.scripts]
infrabaseline-audit = "infrabaseline_audit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["infrabaseline_audit*"]

[tool.setuptools.package-data]
"infrabaseline_audit" = ["py.typed"]

# ── Dev / test dependencies ───────────────────────────────────────────────────
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[all]>=5.0",     # AWS mocking for tests
    "ruff>=0.4",
    "mypy>=1.10",
    "boto3-stubs[essential]>=1.34",
]

# ── Ruff (linter) ─────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict         = false
ignore_missing_imports = true
